# py_proj_manager

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
py_project_manager/: config.py  main.py
py_project_manager/tests/scripts/: test__logging_config.py  test__logging_config_report.html
